--- a/IntegratorAutomation/test-output/index.html
+++ b/IntegratorAutomation/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\asingh73\AppData\Local\Temp\testng-eclipse-1593460077\testng-customsuite.xml</span>
+                    <span>C:\Users\SnowTest\AppData\Local\Temp\testng-eclipse-85386662\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,27 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.tests.ContainerTest" class="method navigator-link" hash-for-method="testCreateContainer(test_ak, test_ak, CONTAINER)">testCreateContainer(test_ak, test_ak, CONTAINER)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.tests.ContainerTest" class="method navigator-link" hash-for-method="testDeleteContainer">testDeleteContainer</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.tests.ContainerTest" class="method navigator-link" hash-for-method="testGetContainerById">testGetContainerById</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.tests.ContainerTest" class="method navigator-link" hash-for-method="testGetContainers">testGetContainers</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="api.tests.ContainerTest" class="method navigator-link" hash-for-method="testUpdateContainer(test_ak, test_ak, CONTAINER)">testUpdateContainer(test_ak, test_ak, CONTAINER)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="api.tests.UserTests" class="method navigator-link" hash-for-method="testPostUser">testPostUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -141,44 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">api.tests.ContainerTest</span>
+              <span class="class-name">api.tests.UserTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testCreateContainer(test_ak, test_ak, CONTAINER)">
-                  </a> <!-- testCreateContainer(test_ak, test_ak, CONTAINER) -->
-                  <span class="method-name">testCreateContainer</span>
-                  <span class="parameters">(test_ak,test_ak,CONTAINER)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testDeleteContainer">
-                  </a> <!-- testDeleteContainer -->
-                  <span class="method-name">testDeleteContainer</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testGetContainerById">
-                  </a> <!-- testGetContainerById -->
-                  <span class="method-name">testGetContainerById</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testGetContainers">
-                  </a> <!-- testGetContainers -->
-                  <span class="method-name">testGetContainers</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testUpdateContainer(test_ak, test_ak, CONTAINER)">
-                  </a> <!-- testUpdateContainer(test_ak, test_ak, CONTAINER) -->
-                  <span class="method-name">testUpdateContainer</span>
-                  <span class="parameters">(test_ak,test_ak,CONTAINER)</span>
+                  <a name="testPostUser">
+                  </a> <!-- testPostUser -->
+                  <span class="method-name">testPostUser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -186,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\asingh73\AppData\Local\Temp\testng-eclipse-1593460077\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\SnowTest\AppData\Local\Temp\testng-eclipse-85386662\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -195,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;api.tests.ContainerTest&quot;/&gt;
+      &lt;class name=&quot;api.tests.UserTests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -235,32 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testCreateContainer')
-data.setCell(0, 2, 'api.tests.ContainerTest')
-data.setCell(0, 3, 3178);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testGetContainers')
-data.setCell(1, 2, 'api.tests.ContainerTest')
-data.setCell(1, 3, 1657);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testDeleteContainer')
-data.setCell(2, 2, 'api.tests.ContainerTest')
-data.setCell(2, 3, 882);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testUpdateContainer')
-data.setCell(3, 2, 'api.tests.ContainerTest')
-data.setCell(3, 3, 661);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'testGetContainerById')
-data.setCell(4, 2, 'api.tests.ContainerTest')
-data.setCell(4, 3, 654);
+data.setCell(0, 1, 'testPostUser')
+data.setCell(0, 2, 'api.tests.UserTests')
+data.setCell(0, 3, 2344);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 2 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -286,26 +220,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">api.tests.ContainerTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">testCreateContainer(test_ak, test_ak, CONTAINER)</span>
+              <div class="chronological-class-name">api.tests.UserTests</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">setupData</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
+              </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">testGetContainerById</span>
-                <span class="method-start">3188 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testUpdateContainer(test_ak, test_ak, CONTAINER)</span>
-                <span class="method-start">3968 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testDeleteContainer</span>
-                <span class="method-start">4631 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testGetContainers</span>
-                <span class="method-start">5515 ms</span>
+                <span class="method-name">testPostUser</span>
+                <span class="method-start">151 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
